<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CS213_Project5</string>
    <string name="museum_of_modern_art">Museum of Modern Art</string>
    <string name="museum_of_natural_history">Museum of Natural History</string>
    <string name="the_met">The Met</string>
    <string name="brooklyn_museum">Brooklyn Museum</string>
    <string name="nyc_museums">NYC Museums</string>
    <string name="student">Student</string>
    <string name="adult">Adult</string>
    <string name="senior">Senior</string>
    <string name="museum_name">Museum Name</string>
    <string name="todo">TODO</string>
    <string name="ticketTotal">Tickets Total:</string>
    <string name="salesTax">Sales Tax:</string>
    <string name="total">Total:</string>
    <string name="maxTicketsMsg">Maximum of 5 tickets each!</string>
    <string name="momaAdult">Adult $25</string>
    <string name="momaSenior">Senior $18</string>
    <string name="momaStudent">Student $14</string>
    <string name="nhmAdult">Adult $23</string>
    <string name="nhmSenior">Senior $18</string>
    <string name="nhmStudent">Student $18</string>
    <string name="metAdult">Adult $25</string>
    <string name="metSenior">Senior $17</string>
    <string name="metStudent">Student $12</string>
    <string name="brookAdult">Adult $16</string>
    <string name="brookSenior">Senior $10</string>
    <string name="brookStudent">Student $10</string>




    <string-array name="adultTicketArray">
        <item>0 Adults</item>
        <item>1 Adults</item>
        <item>2 Adults</item>
        <item>3 Adults</item>
        <item>4 Adults</item>
        <item>5 Adults</item>
    </string-array>
    <string-array name="seniorTicketArray">
        <item>0 Seniors</item>
        <item>1 Seniors</item>
        <item>2 Seniors</item>
        <item>3 Seniors</item>
        <item>4 Seniors</item>
        <item>5 Seniors</item>
    </string-array>
    <string-array name="studentTicketArray">
        <item>0 Students</item>
        <item>1 Students</item>
        <item>2 Students</item>
        <item>3 Students</item>
        <item>4 Students</item>
        <item>5 Students</item>
    </string-array>
</resources>