<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicketActivity">

    <ImageView
        android:id="@+id/museumImage"
        android:layout_width="284dp"
        android:layout_height="236dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:onClick="museumImageOnCLick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/moma" />

    <TextView
        android:id="@+id/MuseumName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="155dp"
        android:layout_marginRight="155dp"
        android:text="@string/museum_name"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adultPrice"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:text="@string/adult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/museumImage" />

    <TextView
        android:id="@+id/seniorPrice"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/senior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adultPrice" />

    <TextView
        android:id="@+id/studentPrice"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/student"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seniorPrice" />

    <TextView
        android:id="@+id/totalLabelView"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/ticketTotal"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentPrice" />

    <TextView
        android:id="@+id/totalLabelView2"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:text="@string/salesTax"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalLabelView" />

    <TextView
        android:id="@+id/totalLabelView5"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:text="@string/total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalLabelView2" />

    <TextView
        android:id="@+id/totalLabelView"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adultTickets" />

    <TextView
        android:id="@+id/totalLabelView3"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/totalLabelView"
        tools:layout_editor_absoluteX="231dp" />

    <TextView
        android:id="@+id/totalLabelView4"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalLabelView3" />

    <Spinner
        android:id="@+id/adultTickets"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:entries="@array/tickets"
        android:spinnerMode="dropdown"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentTickets"
        tools:visibility="visible" />

    <Spinner
        android:id="@+id/seniorTickets"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:entries="@array/tickets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/museumImage" />

    <Spinner
        android:id="@+id/studentTickets"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:entries="@array/tickets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seniorTickets" />

</androidx.constraintlayout.widget.ConstraintLayout>