<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/brooklyn_museum"
            android:layout_width="149dp"
            android:layout_height="17dp" android:id="@+id/textView4"
            android:layout_marginLeft="12dp" android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            android:layout_marginBottom="20dp" app:layout_constraintBottom_toTopOf="@+id/BrooklynTicketsButton"/>
    <TextView
            android:text="@string/the_met"
            android:layout_width="149dp"
            android:layout_height="17dp" android:id="@+id/textView3"
            android:layout_marginLeft="12dp" android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            android:layout_marginBottom="20dp" app:layout_constraintBottom_toTopOf="@+id/MetTicketsButton"/>
    <TextView
            android:text="@string/museum_of_natural_history"
            android:layout_width="180dp"
            android:layout_height="42dp" android:id="@+id/textView2"
            android:layout_marginLeft="12dp" android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintBottom_toTopOf="@+id/NaturalHistoryTicketsButton" android:layout_marginBottom="28dp"/>
    <ImageView
            android:layout_width="198dp"
            android:layout_height="153dp" tools:srcCompat="@drawable/moma" android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="17dp" android:layout_marginStart="17dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="17dp" android:layout_marginBottom="17dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"/>
    <ImageView
            android:layout_width="196dp"
            android:layout_height="161dp" tools:srcCompat="@drawable/natural_history"
            android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="17dp" android:layout_marginStart="17dp" android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginBottom="17dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"/>
    <ImageView
            android:layout_width="193dp"
            android:layout_height="156dp" tools:srcCompat="@drawable/met" android:id="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="17dp" android:layout_marginStart="17dp" android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginBottom="17dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView4"/>
    <ImageView
            android:layout_width="196dp"
            android:layout_height="157dp" tools:srcCompat="@drawable/brooklyn" android:id="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="17dp" android:layout_marginStart="17dp" android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="17dp"/>
    <TextView
            android:text="@string/museum_of_modern_art"
            android:layout_width="166dp"
            android:layout_height="37dp" android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp" app:layout_constraintStart_toEndOf="@+id/imageView"/>
    <Button
            android:text="@string/tickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/MoMATicketsButton"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp" app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginBottom="96dp" app:layout_constraintBottom_toTopOf="@+id/textView2"/>
    <Button
            android:text="@string/tickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/NaturalHistoryTicketsButton"
            android:layout_marginLeft="12dp" android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginBottom="116dp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"/>
    <Button
            android:text="@string/tickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/MetTicketsButton"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp" app:layout_constraintStart_toEndOf="@+id/imageView3"
            android:layout_marginBottom="96dp" app:layout_constraintBottom_toTopOf="@+id/textView4"/>
    <Button
            android:text="@string/tickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/BrooklynTicketsButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp" android:layout_marginLeft="12dp" android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@+id/imageView4"/>

</androidx.constraintlayout.widget.ConstraintLayout>